2025-05-24T00:53:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15221709955 # 653
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-24
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 538 931 / 552 945
* notice: next accum: outdated-unq outdated-all / unq all: 539 932 / 553 946
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-09] / [2025-05-23]

2025-05-23T00:55:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15199851087 # 652
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-23
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 537 930 / 551 944
* notice: next accum: outdated-unq outdated-all / unq all: 538 931 / 552 945
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-08] / [2025-05-22]

2025-05-22T00:55:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15175626259 # 651
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-22
* notice: last 14d: unq all: 3 14
* notice: prev accum: outdated-unq outdated-all / unq all: 536 929 / 550 943
* notice: next accum: outdated-unq outdated-all / unq all: 537 930 / 551 944
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-05-07] / [2025-05-21]

2025-05-20T00:56:30Z: