@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-05-24T00:53:07Z",
-  "count_outdated" : 932,
-  "uniques_outdated" : 539,
-  "count" : 946,
-  "uniques" : 553,
+  "timestamp" : "2025-05-25T01:00:40Z",
+  "count_outdated" : 934,
+  "uniques_outdated" : 541,
+  "count" : 947,
+  "uniques" : 554,
   "clones" : [
-    {
-      "timestamp": "2025-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2025-05-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-12T00:00:00Z",
       "count": 1,
@@ -106,6 +88,15 @@
     },
     {
       "timestamp": "2025-05-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-05-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
