@@ -1,17 +1,7 @@
 {
-  "count": 14,
+  "count": 13,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-05-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-05-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-12T00:00:00Z",
       "count": 1,
@@ -59,6 +49,11 @@
     },
     {
       "timestamp": "2025-05-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-05-24T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
